plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.5'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'kr.co.winnticket'
version = '0.0.1-SNAPSHOT'
description = 'winticket'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // 스프링부트 기본 의존성들
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // PostgreSQL JDBC 드라이버
    runtimeOnly 'org.postgresql:postgresql'

    // MyBatis 스프링부트 연동
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'

    // 롬복 (Getter/Setter 자동 생성용)
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // 테스트용
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    tasks.withType(Test).configureEach {
        useJUnitPlatform()
    }

    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
    implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'
    implementation 'org.glassfish:jakarta.el:4.0.2'

    // spring security
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // Spring Data Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    //jwt
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'

    //Excel
    implementation 'org.apache.poi:poi-ooxml:5.2.3'

    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // 암호 라이브러리
    implementation 'org.bouncycastle:bcprov-jdk15on:1.70'

    // Payletter 결제 API 호출용 HTTP 클라이언트(WebClient 기반)
    implementation 'org.springframework.boot:spring-boot-starter-webflux'


    // AWS SDK v2 BOM
    implementation platform("software.amazon.awssdk:bom:2.25.20")

    // S3
    implementation "software.amazon.awssdk:s3"

    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

    // KCP 암호화알고리즘
    implementation 'org.bouncycastle:bcprov-jdk18on:1.78'

    // KCP PKCS8, PEM 파싱
    implementation 'org.bouncycastle:bcpkix-jdk18on:1.78'


}

springBoot {
    mainClass = 'kr.co.winnticket.WinticketApplication'
}

tasks.withType(ProcessResources) {
    from('src/main/java') {
        include '**/*.xml'
    }
}
